fix visible lens in search input

--- a/css/style.css
+++ b/css/style.css
@@ -105,7 +105,7 @@ footer {
    top: 50%;
    left: 15px;
    transform: translateY(-50%);
-   z-index: 1;
+   z-index: 3;
 }
 #search-contact input.form-control {
    border-radius: 9px;
